--- a/admin-parent/admin-component/pom.xml
+++ b/admin-parent/admin-component/pom.xml
@@ -76,6 +76,11 @@
             <artifactId>jstl</artifactId>
         </dependency>
         <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
         </dependency>
